refactor and fix test for newest jvm