@@ -27,10 +27,18 @@ dependencies {
   latestDepTestImplementation group: 'org.redisson', name: 'redisson', version: '3.+', {
     exclude group: 'org.slf4j', module: 'slf4j-api'
   }
-  testImplementation(project(':dd-java-agent:instrumentation:redisson-2.0.0'))
-  testImplementation(project(':dd-java-agent:instrumentation:redisson-2.3.0'))
+  testImplementation(project(':dd-java-agent:instrumentation:redisson:redisson-2.0.0'))
+  testImplementation(project(':dd-java-agent:instrumentation:redisson:redisson-2.3.0'))
 }
 
-tasks.withType(Test).configureEach {
-  usesService(testcontainersLimit)
+project.afterEvaluate {
+  tasks.withType(Test).configureEach {
+    if (javaLauncher.get().metadata.languageVersion.asInt() >= 16) {
+      jvmArgs += ['--add-opens', 'java.base/java.math=ALL-UNNAMED']
+      jvmArgs += ['--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED']
+      jvmArgs += ['--add-opens', 'java.base/java.net=ALL-UNNAMED']
+      jvmArgs += ['--add-opens', 'java.base/java.text=ALL-UNNAMED']
+    }
+    usesService(testcontainersLimit)
+  }
 }
